# grid-text-worker

./: .env.example  .gitignore  AGENTS.md  README.md  app.manifest  build-exe.ps1  pyproject.toml  run.ps1  run_frozen.py  run_worker.py
.github/workflows/: build-exe.yml  build.yml  test.yml
docs/: vllm-optimization-guide.md  vllm-setup-guide.md
inference_worker/: cli.py  config.py  detect_backends.py  env_utils.py  gui.py  headless.py  p2p_client.py  service.py  worker.py  ws_client.py
inference_worker/web/: app.py  routes.py
inference_worker/web/static/: style.css
inference_worker/web/templates/: base.html  dashboard.html  logs.html  settings.html  setup.html
scripts/: build-exe.ps1  make_icon.py  make_splash.py  run.ps1
tests/: test_smoke.py
