[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-inference-worker"
version = "0.3.2"
description = "Turn-key text inference worker for AI Power Grid (multi-backend, OpenAI-compatible)"
requires-python = ">=3.9"
dependencies = [
    "httpx",
    "python-dotenv",
    # fastapi>=0.110 bundles starlette>=0.36, which has the modern
    # TemplateResponse(request, name, context) signature the dashboard uses. The old
    # >=0.100 floor allowed a starlette where that call broke on fresh installs (issue #2).
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.20.0",
    "jinja2>=3.1.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
build = ["pillow>=9.0.0", "pyinstaller"]
test = ["pytest", "pytest-asyncio", "respx"]

[project.scripts]
grid-inference-worker = "inference_worker.cli:main"

[tool.setuptools.packages.find]
include = ["inference_worker*"]

[tool.setuptools.package-data]
inference_worker = ["web/templates/**/*.html", "web/static/**/*"]
